# llama.cpp-adaptive-turboquant

./: .gitignore  README.md  compile.ps1  qwen-moe-turbo.ps1  qwen-turbo.ps1
common/: arg.cpp  chat-diff-analyzer.cpp
ggml/include/: ggml-turbo-sink-trigger.h  ggml.h
ggml/src/: ggml-common.h  ggml-quants.h  ggml-turbo-quant.c  ggml.c
ggml/src/ggml-cpu/: ops.cpp
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  convert.cu  cpy.cu  dequantize.cuh  fattn-common.cuh  fattn-mma-f16.cuh  fattn-vec.cuh  fattn.cu  getrows.cu  ggml-cuda.cu  mmq.cu  mmq.cuh  set-rows.cu  turbo-innerq.cuh  turbo-quant.cuh  turbo-sink.cu  turbo-sink.cuh  turbo-tcq.cuh
ggml/src/ggml-cuda/template-instances/: fattn-mma-f16-instance-ncols1_16-ncols2_1.cu  fattn-mma-f16-instance-ncols1_32-ncols2_1.cu  fattn-mma-f16-instance-ncols1_64-ncols2_1.cu  fattn-mma-f16-instance-ncols1_8-ncols2_1.cu  fattn-vec-instance-f16-turbo1_5.cu  fattn-vec-instance-f16-turbo2_0.cu  fattn-vec-instance-f16-turbo3_0.cu  fattn-vec-instance-f16-turbo4_0.cu  fattn-vec-instance-q8_0-turbo1_5.cu  fattn-vec-instance-q8_0-turbo2_0.cu  fattn-vec-instance-q8_0-turbo3_0.cu  fattn-vec-instance-q8_0-turbo3_tcq.cu  fattn-vec-instance-q8_0-turbo4_0.cu  fattn-vec-instance-turbo1_5-f16.cu  fattn-vec-instance-turbo1_5-q8_0.cu  fattn-vec-instance-turbo1_5-turbo1_5.cu  fattn-vec-instance-turbo1_5-turbo2_0.cu  fattn-vec-instance-turbo1_5-turbo3_0.cu  fattn-vec-instance-turbo1_5-turbo4_0.cu  fattn-vec-instance-turbo2_0-f16.cu  fattn-vec-instance-turbo2_0-q8_0-d128-decode.cu  fattn-vec-instance-turbo2_0-q8_0-d128-prefill.cu  fattn-vec-instance-turbo2_0-q8_0-d256-decode.cu  fattn-vec-instance-turbo2_0-q8_0-d256-prefill.cu  fattn-vec-instance-turbo2_0-q8_0-d64-decode.cu  fattn-vec-instance-turbo2_0-q8_0-d64-prefill.cu  fattn-vec-instance-turbo2_0-q8_0.cu  fattn-vec-instance-turbo2_0-turbo1_5.cu  fattn-vec-instance-turbo2_0-turbo2_0-d128-decode.cu  fattn-vec-instance-turbo2_0-turbo2_0-d128-prefill.cu  fattn-vec-instance-turbo2_0-turbo2_0-d256-decode.cu  fattn-vec-instance-turbo2_0-turbo2_0-d256-prefill.cu  fattn-vec-instance-turbo2_0-turbo2_0-d512-decode.cu  fattn-vec-instance-turbo2_0-turbo2_0-d512-prefill.cu  fattn-vec-instance-turbo2_0-turbo2_0-d64-decode.cu  fattn-vec-instance-turbo2_0-turbo2_0-d64-prefill.cu  fattn-vec-instance-turbo2_0-turbo2_0.cu  fattn-vec-instance-turbo2_0-turbo3_0.cu  fattn-vec-instance-turbo2_0-turbo4_0.cu  fattn-vec-instance-turbo2_tcq-turbo2_tcq.cu  (+43 more)
ggml/src/ggml-metal/: ggml-metal-device.m  ggml-metal-ops.cpp  ggml-metal.metal
quality-tests/: capability_test.py  extreme_context_test.py  kl_divergence.py  kld_logprobs_f16.json  kld_logprobs_q8_0.json  kld_logprobs_turbo1.5.json  kld_logprobs_turbo2.json  kld_logprobs_turbo3.json  kld_logprobs_turbo4.json  kld_summary_q8_0.json  kld_summary_turbo1.5.json  kld_summary_turbo2.json  kld_summary_turbo3.json  kld_summary_turbo4.json  measure_skip_rate.py  niah_test.py  passkey_retrieval.py  quality-gate.sh  run_capability_suite.sh  run_quality_suite.sh
src/: CMakeLists.txt  llama-context.cpp  llama-graph.cpp  llama-kv-cache.cpp  llama-model.cpp  llama-vocab.cpp
src/models/: gemma4-iswa.cpp  llama.cpp  qwen3.cpp  qwen3moe.cpp
tests/: test-backend-ops.cpp
tools/llama-bench/: llama-bench.cpp
tools/server/: CMakeLists.txt  server-common.cpp  server-context.cpp  server-task.cpp
